--- a/index1.html
+++ b/index1.html
@@ -217,10 +217,45 @@
     style="background: url(assets/images/background_03.jpg) ; background-size:100% 100% ; background-attachment: fixed">
     </body>>
       </body>
+      <div class="container">
+          <div class="media-container-row">
+              <div class="media-content">
+                  <h1 class="mbr-section-title mbr-white pb-6 mbr-fonts-style display-6">
+                  &nbsp&nbsp&nbsp课业学习</h1>
+                  <div class="mbr-section-text mbr-white pb-3 ">
+                    <p class="mbr-text mbr-fonts-style display-5">
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp“画采编设播一体”，多元发展。
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp专业基础扎实，成绩优异。</p>
+                      <p class="mbr-text mbr-fonts-style display-7">
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《广告策划与创意》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《市场营销》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《新媒体与社会》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《VR与航拍技术》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《量化分析》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《艺术与设计》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《跨文化传播》
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp•&nbsp……
+                  </div>
+              </div>
+              <div class="mbr-figure" style="width: 125%;">
+                <img src="assets/images/pic_03.jpg" alt="Mobirise" title="">
+            </div>
+          </div>
+      </div>
+      <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+          <a href="#next">
+          <i class="mbri-down mbr-iconfont"></i>
+      </a>
+      </div>
+  </section>
+    <section class="header3 cid-r3otdsLP1U mbr-fullscreen" id="header3-9"
+    style="background: url(assets/images/background_04.jpg) ; background-size:100% 100% ; background-attachment: fixed">
+    </body>>
+      </body>
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 135%;">
-                    <img src="assets/images/pic_02.jpeg" alt="Mobirise" title="">
+                    <img src="assets/images/pic_04.jpeg" alt="Mobirise" title="">
                     <!-- <img src="http://i4.bvimg.com/634539/824e7a3e73bb13a1.png" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
@@ -244,13 +279,13 @@
         </a>
         </div>
     </section>
-    <section class="header3 cid-r3ozbOCA7G mbr-fullscreen" id="header3-e"     style="background: url(assets/images/background_04.jpg) ; background-size:100% 100% ; background-attachment: fixed">
+    <section class="header3 cid-r3ozbOCA7G mbr-fullscreen" id="header3-e"     style="background: url(assets/images/background_05.jpg) ; background-size:100% 100% ; background-attachment: fixed">
     </body>>
       </body>
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 80%;">
-                    <img src="assets/images/pic_03.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/pic_05.jpg" alt="Mobirise" title="">
                     <!-- <img src="http://i4.bvimg.com/634539/f6aeecd00ee91ad1.gif" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
@@ -277,31 +312,6 @@
       </div>
     </div>
   </div>
-        <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-            <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-        </div>
-    </section>
-    <section class="header3 cid-r3oA4r7r19 mbr-fullscreen" id="header3-f">
-        <div class="container">
-            <div class="media-container-row">
-                <div class="mbr-figure" style="width: 100%;">
-                    <img src="https://cs-notes-1256109796.cos.ap-guangzhou.myqcloud.com/githubio/logomakr-0zpezn-563x600.png" alt="Mobirise" title="">
-                </div>
-                <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    开源技术博客</h1>
-                    <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">开源在 Github 的技术博客，已有 70k star，在所有 Github 开源仓库中排在 20 名。&nbsp;
-                            <br>
-                        </p>
-                    </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/CS-Notes" target="_blank">Github</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
-                </div>
-            </div>
-        </div>
         <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
             <a href="#next">
             <i class="mbri-down mbr-iconfont"></i>
