--- a/index1.html
+++ b/index1.html
@@ -22,6 +22,7 @@
 </head>
 
 <style>
+  a{text-decoration:underline}
   body,
   html {
       width: 100%;
@@ -224,8 +225,8 @@
                   &nbsp&nbsp&nbsp课业学习</h1>
                   <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">
-                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp“画采编设播一体”，多元发展。
-                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp专业基础扎实，成绩优异。</p>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp画采编设播一体，多元发展。
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp专业基本功扎实，成绩优异。</p>
                       <p class="mbr-text mbr-fonts-style display-7">
                           <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《广告策划与创意》
                           <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《市场营销》
@@ -234,7 +235,7 @@
                           <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《量化分析》
                           <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《艺术与设计》
                           <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 《跨文化传播》
-                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp•&nbsp……
+                          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp……
                   </div>
               </div>
               <div class="mbr-figure" style="width: 125%;">
@@ -318,26 +319,34 @@
         </a>
         </div>
     </section>
-    <section class="header3 cid-r3qD4KEELP mbr-fullscreen" id="header3-7">
-        <div class="container">
-            <div class="media-container-row">
-                <div class="mbr-figure" style="width: 200%;">
-                    <img src="https://cs-notes-1256109796.cos.ap-guangzhou.myqcloud.com/githubio/8-1.gif" alt="Mobirise" title="">
-                    <!-- <img src="http://i4.bvimg.com/634539/241c3f357d316274.gif" alt="Mobirise" title=""> -->
-                </div>
-                <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    微博系统实现</h1>
-                    <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• 根据微博系统读多写少的特点，使用 MySQL 主从架构来支持读写分离；
-                            <br>• 根据微博系统热点数据明显的特点，使用 Redis 缓存热点数据；
-                            <br>• 使用 Redis 实现 Feed 流。</p>
-                    </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/MBlog" target="_blank">Github</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
-                </div>
-            </div>
+    <section class="header3 cid-r3qD4KEELP mbr-fullscreen" id="header3-7"
+    style="background: url(assets/images/background_06.jpg) ; background-size:100% 100% ; background-attachment: fixed">>
+    <div class="container">
+      <div class="media-container-row">
+          <div class="media-content">
+              <h1 class="mbr-section-title mbr-white pb-6 mbr-fonts-style display-6">
+              &nbsp&nbsp&nbsp实习实践</h1>
+              <div class="mbr-section-text mbr-white pb-3 ">
+                <p class="mbr-text mbr-fonts-style display-5">
+                  <br>&nbsp&nbsp&nbsp&nbsp&nbsp西北大学官方微信、微博平台
+                  <br>&nbsp&nbsp&nbsp&nbsp&nbsp摄影、文编、美编……</p>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp近期精选作品</a>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• <a href="https://mp.weixin.qq.com/s/tE0I4p8pBANCCOzUVoOkpA" target="_blank">《2022年研究生招生考试西北大学考点考生须知》</a>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• <a href="https://mp.weixin.qq.com/s/RJUpPdDNa2m5vaCnw_7f-g" target="_blank">《冬日里的定向越野赛，看NWUers热情满满！》</a>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• <a href="https://mp.weixin.qq.com/s/5HlJ9QLrrUtmpNGcNH4fVg" target="_blank">《今日小雪，让西大人的微笑温暖你！》</a>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• <a href="https://mp.weixin.qq.com/s/_zw-2uQIhHZqeYeC84s6pg" target="_blank">《长安初雪 | 立冬，一夜银装素裹的西大浪漫》</a>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• <a href="https://mp.weixin.qq.com/s/YVraUi_S_YEdVm-3nyu3Ug" target="_blank">《走，今晚到NWU操场上跳舞去！》</a>
+                      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp……
+              </div>
+              <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://weibo.com/u/1866373071" target="_blank">欢迎关注西北大学官方微博</a>
+                <a class="btn btn-md btn-black-outline display-4" href="https://weibo.com/u/1866373071">欢迎关注西北大学官方微博</a></div>
+          </div>
+          <div class="mbr-figure" style="width: 75%;">
+            <img src="assets/images/pic_06.jpg" alt="Mobirise" title="">
         </div>
+      </div>
+  </div>
         <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
             <a href="#next">
             <i class="mbri-down mbr-iconfont"></i>
