--- a/index1.html
+++ b/index1.html
@@ -353,225 +353,45 @@
         </a>
         </div>
     </section>
-    <section class="header3 cid-r3oBi3zCAt mbr-fullscreen" id="header3-g" style="background: linear-gradient(45deg, rgb(79, 73, 67), rgb(91, 104, 107));">
-        <div class="container">
-            <div class="media-container-row">
-                <div class="mbr-figure" style="width: 160%;">
-                    <img src="https://cs-notes-1256109796.cos.ap-guangzhou.myqcloud.com/githubio/10.gif" alt="Mobirise" title="">
-                    <!-- <img src="http://i4.bvimg.com/634539/b461705039bbac8e.gif" alt="Mobirise" title=""> -->
-                </div>
-                <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Github Markdown 文档转换工具</h1>
-                    <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• Github 的 Markdown 不支持目录、Mathjax 公式、图片居中显示以及一些特殊符号；
-                            <br>• 本工具可以自动生成目录、将公式转换为&nbsp;CodeCogs 云服务、使用 div 标签将图片居中以及替换一些特殊字符。
-                            <br>
-                        </p>
-                    </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/GFM-Converter" target="_blank">Github</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-            <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-        </div>
-    </section>
-    <section class="header3 cid-r3oCSWB3HM mbr-fullscreen" id="header3-h">
-        <div class="container">
-            <div class="media-container-row">
-                <div class="mbr-figure" style="width: 200%;">
-                    <img src="https://cs-notes-1256109796.cos.ap-guangzhou.myqcloud.com/githubio/11.gif" alt="Mobirise" title="">
-                    <!-- <img src="http://i4.bvimg.com/634539/80c3277c3479d821.gif" alt="Mobirise" title=""> -->
-                </div>
-                <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    Leetcode 夜间主题样式</h1>
-                    <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">为 Leetcode 网站写的夜间主题样式，在 Stylish 社区已经有 300+ 的用户下载使用。</p>
-                    </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/Dark-Theme-Leetcode" target="_blank">Github</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="mbr-arrow hidden-sm-down" aria-hidden="true" id="next-skill">
-            <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-        </div>
-    </section>
-    <section class="progress-bars3 cid-r3oHlTWEui" id="progress-bars3-i">
-        <div class="container">
-            <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">
-            编程语言</h2>
-            <div class="media-container-row pt-5 mt-2">
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress1" role="progressbar" data-goal="70">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Java
-                    </h4>
-                    </div>
-                </div>
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress2" role="progressbar" data-goal="50">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        C++
-                    </h4>
-                    </div>
-                </div>
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress3" role="progressbar" data-goal="50">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Python
-                    </h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="progress-bars3 cid-r3oHUdpUmZ" id="progress-bars3-j">
-        <div class="container">
-            <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">
-            Web
-        </h2>
-            <div class="media-container-row pt-5 mt-2">
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress1" role="progressbar" data-goal="70">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        MySQL
-                    </h4>
-                    </div>
-                </div>
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress2" role="progressbar" data-goal="50">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Spring
-                    </h4>
-                    </div>
-                </div>
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress3" role="progressbar" data-goal="50">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        JavaScript
-                    </h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="progress-bars3 cid-r3oIeKK9By" id="progress-bars3-l">
-        <div class="container">
-            <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">
-            中间件
-        </h2>
-            <div class="media-container-row pt-5 mt-2">
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress1" role="progressbar" data-goal="70">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Redis
-                    </h4>
-                    </div>
-                </div>
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress2" role="progressbar" data-goal="50">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        RabbitMQ
-                    </h4>
-                    </div>
-                </div>
-                <div class="card p-3 align-center">
-                    <div class="wrap">
-                        <div class="pie_progress progress3" role="progressbar" data-goal="50">
-                            <p class="pie_progress__number mbr-fonts-style display-5"></p>
-                        </div>
-                    </div>
-                    <div class="mbr-crt-title pt-3">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        ZooKeeper
-                    </h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="cid-qTkAaeaxX5 mbr-reveal" id="footer1-2">
         <div class="container">
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class="media-wrap">
                         <a href="">
-                        <img src="https://cs-notes-1256109796.cos.ap-guangzhou.myqcloud.com/githubio/logomakr-3sxxzw-192x192.png" alt="Mobirise" title="">
+                        <img src="assets/images/profile_icon.png" alt="Mobirise" title="">
                     </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class="pb-3">
-                    Address
+                    联系地址
                 </h5>
-                    <p class="mbr-text">广东省番禺区中山大学实验中心 B 座</p>
-                </div>
-                <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                    <h5 class="pb-3">
-                    Contacts
-                </h5>
-                    <p class="mbr-text">
-                        Email: zhengyc101@163.com
-                        <br>Phone: (+86) 18020807381
-                        <br>
+                    <p class="mbr-text">陕西省西安市长安区学府大道1号
+                      <br>西北大学长安校区
+                      <br>西北大学新闻传播学院
                     </p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class="pb-3">
-                    Links
+                    版权信息
                 </h5>
-                    <div class="soc-item">
-                        <a href="https://github.com/CyC2018" target="_blank">
-                                <span class="socicon-github socicon mbr-iconfont mbr-iconfont-social" style="color: #fff;"></span>
-                            </a>
-                    </div>
+                    <p class="mbr-text">
+                        © 2022 马思淼 @ NWU
+                        <br>版权所有。
+                        <br>All Rights Reserved.
+                    </p>
+                </div>
+                <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                    <h5 class="pb-3">
+                     (๑•̀ㅂ•́)و✧
+                </h5>
+                    <p class="mbr-text">
+                      功不唐捐，
+                      <br>玉汝于成，
+                      <br>行而不辍。
+                    </p>
+                </div>
                         <br>
                         <br>
                     </p>
