--- a/index1.html
+++ b/index1.html
@@ -190,7 +190,7 @@
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 50%;">
-                    <img src="assets/images/1-2.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/pic_02.jpg" alt="Mobirise" title="">
                     <!-- <img src="http://i4.bvimg.com/634539/d3d1d3391a12d9e3.gif" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
