--- a/index.html
+++ b/index.html
@@ -55,15 +55,7 @@
         <script type="text/javascript">
         (function($) {
             var imgs = [
-                "assets/images/03.jpg", // 43k
-                "assets/images/mbr-1920x1280.jpg", // 155k
-                "assets/images/1-1014x325.png", // 126k
-                "assets/images/1-348x112.png", // 18k
-                "assets/images/8-1.gif", // 582k
-                "assets/images/11.gif", // 221k
-                "assets/images/1-3.gif", //501k
-                "assets/images/10.gif", // 1387k
-                "assets/images/1-2.gif" // 4245k
+                "assets/images/03.jpg"
             ];
             var n = imgs.length;
             var sizes = [43, 155, 126, 18, 582, 221, 501, 1378, 7900];
