v 5.3 修改轮播的小bug

--- a/index1.html
+++ b/index1.html
@@ -257,7 +257,6 @@
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 135%;">
                     <img src="assets/images/pic_04.jpeg" alt="Mobirise" title="">
-                    <!-- <img src="http://i4.bvimg.com/634539/824e7a3e73bb13a1.png" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
@@ -287,7 +286,6 @@
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 80%;">
                     <img src="assets/images/pic_05.jpg" alt="Mobirise" title="">
-                    <!-- <img src="http://i4.bvimg.com/634539/f6aeecd00ee91ad1.gif" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
@@ -363,6 +361,9 @@
             <div class="media-content">
                 <h1 class="mbr-section-title mbr-white pb-6 mbr-fonts-style display-6">
                 <br>&nbsp&nbsp&nbsp摄影作品集</h1>
+                <div class="mbr-section-text mbr-white pb-3 ">
+                  <p class="mbr-text mbr-fonts-style display-5">
+                    <br>&nbsp&nbsp&nbsp&nbsp&nbsp用光与影的艺术记录生活。</p>
                                     <!-- slide是轮播图区域 -->
                                     <style>
                                       * {
@@ -703,7 +704,6 @@
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class="media-wrap">
-                        <a href="">
                         <img src="assets/images/profile_icon.png" alt="Mobirise" title="">
                     </a>
                     </div>
